@@ -4,6 +4,9 @@ Before CMF 1.6 beta
 
     - Removed BBBTransaction class from CMFCore.utils
 
+    - Fixed import of actions from extension profiles, now they don't
+      overwrite all previous actions in the action provider.
+
   Features
 
     - Replaced Z2 interfaces w/ Z3 interfaces, dynamically creating Z2
